--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,8 +36,8 @@ jobs:
 
       - uses: 'google-github-actions/auth@v2'
         with:
-          project_id: $PROJECT_ID
-          workload_identity_provider: $WORKLOAD_IDENTITY_PROVIDER
+          project_id: ${{ secrets.PROJECT_ID }}
+          workload_identity_provider: ${{ WORKLOAD_IDENTITY_PROVIDER }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
