--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,8 +36,8 @@ jobs:
 
       - uses: 'google-github-actions/auth@v2'
         with:
-          project_id: ${{ secrets.PROJECT_ID }}
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: 'micro-liberty-291115'
+          workload_identity_provider: 'projects/760746619235/locations/global/workloadIdentityPools/github-actions-test/providers/github'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
