--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,9 +35,10 @@ jobs:
         run: echo Hello, world!
 
       - uses: 'google-github-actions/auth@v2'
+        id: auth
         with:
-          project_id: 'micro-liberty-291115'
-          workload_identity_provider: 'projects/760746619235/locations/global/workloadIdentityPools/github-actions-test-dev/providers/github'
+          project_id: '${{ secrets.PROJECT_ID }}'
+          workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
