--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: 'google-github-actions/auth@v2'
         id: auth
-        with:
+        env:
           project_id: '${{ secrets.PROJECT_ID }}'
           workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
 
