--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: dev
 
     # Add "id-token" with the intended permissions.
     permissions:
@@ -36,7 +37,7 @@ jobs:
 
       - uses: 'google-github-actions/auth@v2'
         id: auth
-        env:
+        with:
           project_id: '${{ secrets.PROJECT_ID }}'
           workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
 
