--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,6 +41,14 @@ jobs:
           project_id: '${{ secrets.PROJECT_ID }}'
           workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
 
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
+        with:
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: 'us-central1-docker.pkg.dev'
+  
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
