--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,7 +50,15 @@ jobs:
           registry: 'us-central1-docker.pkg.dev'
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
-  
+
+      - name: Build, tag and push container
+        id: build-image
+        uses: docker/build-push-action@v6
+        with:
+          push: true 
+          tags: |
+            us-central1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/sample/github-actions-test-hello:${{ inputs.ref }}
+          
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
