--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           push: true 
           tags: |
-            us-central1-docker.pkg.dev/micro-liberty-291115/sample/github-actions-test-hello:${{ inputs.ref }}
+            us-central1-docker.pkg.dev/micro-liberty-291115/sample/github-actions-test-hello:latest
           
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
